it works and is styled

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,59 @@
 :root {
-  font: 16px / 1 sans-serif;
+  font: 32px / 1 sans-serif;
 }
 
 html {
   height: 100%;
-  background: lightgoldenrodyellow;
+  background: rgb(59, 0, 220);
+  color: whitesmoke;
 }
 
 body {
-  margin: 0;
+  margin: 2rem;
   min-height: 100%;
+  background: url('https://upload.wikimedia.org/wikipedia/commons/thumb/5/58/Messier_74_by_HST.jpg/935px-Messier_74_by_HST.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  text-align: center;
+  border: inset 1rem mediumspringgreen;
+}
+
+.be-centered {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+button {
+  border: 0;
+  line-height: 2.5;
+  padding: 0 10px;
+  font-size: 1rem;
+  text-align: center;
+  color: #fff;
+  text-shadow: 1px 1px 1px #000;
+  border-radius: 10px;
+  background-color: rgb(59, 0, 220);
+  background-image: linear-gradient(
+    to top left,
+    rgba(0, 0, 0, 0.2),
+    rgba(0, 0, 0, 0.2) 30%,
+    rgba(0, 0, 0, 0)
+  );
+  box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6),
+    inset -2px -2px 3px rgba(0, 0, 0, 0.6);
+}
+
+button:hover {
+  background-color: rgb(23, 51, 179);
+}
+
+.display {
+  background: aliceblue;
+  border-radius: 0.5rem;
+  margin: 1rem;
+  padding: 0.75rem;
+  color: black;
 }
