--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font: 32px / 1 sans-serif;
+  font: 28px / 1 sans-serif;
 }
 
 html {
@@ -9,14 +9,14 @@ html {
 }
 
 body {
-  margin: 2rem;
+  margin: 1rem;
   min-height: 100%;
   background: url('https://upload.wikimedia.org/wikipedia/commons/thumb/5/58/Messier_74_by_HST.jpg/935px-Messier_74_by_HST.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   text-align: center;
-  border: inset 1rem mediumspringgreen;
+  border: inset 0.5rem mediumspringgreen;
 }
 
 .be-centered {
@@ -30,11 +30,11 @@ button {
   border: 0;
   line-height: 2.5;
   padding: 0 10px;
-  font-size: 1rem;
+  font-size: 0.5rem;
   text-align: center;
   color: #fff;
   text-shadow: 1px 1px 1px #000;
-  border-radius: 10px;
+  border-radius: 0.5rem;
   background-color: rgb(59, 0, 220);
   background-image: linear-gradient(
     to top left,
